<resources>
    <string name="app_name">AndroidStudioProject</string>
    <string name="register">Register</string>
    <string name="let_s_get_you_settled_in_and_start_shopiing_right_away">Let\'s get you settled in and start shopiing right away.</string>
    <string name="welcome_to">Welcome to</string>
    <string name="login">Login</string>
    <string name="euphoria">Euphoria</string>
    <string name="email">Email</string>
    <string name="password">*********</string>
    <string name="forget_password">Forget Password?</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="kpop_products">Kpop Products!</string>
    <string name="anime_products">Anime Products!</string>
    <string name="submit">Submit</string>
    <string name="upload_your_image">Upload your image</string>
</resources>