<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE8F1"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="58dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#885B78"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="349dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_dg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="351dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_dg"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:text="@string/forget_password"
        android:textColor="#885B78"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLoginScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/purple"
        android:onClick="btnLogin"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/forgetPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginScreen"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnLoginScreen"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginScreen">


    </LinearLayout>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="92dp"
        android:layout_height="23dp"
        android:layout_marginTop="48dp"
        android:text="@string/signup"
        android:textColor="#885B78"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/forgetPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#6B425C"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassword"
        app:layout_constraintVertical_bias="0.235" />


</androidx.constraintlayout.widget.ConstraintLayout>