<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE8F1"
    android:layout_margin="8dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/teat1" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="334dp"
        android:layout_height="47dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/purple"
        android:onClick="btnOpenSignupPage"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="77dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img1"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/teat1" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="66dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673"
        app:srcCompat="@drawable/teat1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="392dp"
        android:layout_height="0dp"
        android:layout_marginTop="319dp"
        android:layout_marginBottom="313dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/let_s_get_you_settled_in_and_start_shopiing_right_away"
        android:textColor="#6B425C"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imgInstagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:textColor="#6B425C"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="334dp"
        android:layout_height="47dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/purple"
        android:onClick="btnOpenLoginPage"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="75dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/img2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        app:srcCompat="@drawable/teat1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/euphoria"
        android:textColor="#6B425C"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgInstagram"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/instagramicon" />

    <TextView
        android:id="@+id/txtOpenInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="Join us on INSTAGRAM:"
        android:textColor="#6B425C"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgInstagram"
        app:layout_constraintEnd_toStartOf="@+id/imgInstagram"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgInstagram"
        app:layout_constraintVertical_bias="0.473" />

</androidx.constraintlayout.widget.ConstraintLayout>